// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NameAvatar NameAvatar 1`] = `
<DocumentFragment>
  <div
    class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-2s90m6-MuiAvatar-root"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="AccountCircleIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`NameAvatar NameAvatar name 1`] = `
<DocumentFragment>
  <div
    class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1u9n0jb-MuiAvatar-root"
    name="cosmo"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1xez6if-MuiTypography-root"
    >
      C
    </p>
  </div>
</DocumentFragment>
`;

exports[`NameAvatar NameAvatar name dark 1`] = `
<DocumentFragment>
  <div
    class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1p8ifuh-MuiAvatar-root"
    name="cosmo"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1uzwznl-MuiTypography-root"
    >
      C
    </p>
  </div>
  ,
</DocumentFragment>
`;
